compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundLocal.fir.kt
fun bar() {
    fun <T: <!UNRESOLVED_REFERENCE!>T<!>?> foo() {}
    <!INAPPLICABLE_CANDIDATE!>foo<!>()
}
